[gd_scene load_steps=6 format=3 uid="uid://bmpde782ph752"]

[ext_resource type="Script" path="res://Windows/SettingsMenu.gd" id="1_4tj3h"]
[ext_resource type="Texture2D" uid="uid://dylrdm4keq383" path="res://Assets/The Fan-tasy Tileset/Beginning Fields.png" id="2_axy0t"]
[ext_resource type="FontFile" uid="uid://brd03th58pauo" path="res://Font/Milonga-Regular.ttf" id="3_6fqsf"]
[ext_resource type="Theme" uid="uid://dr47g3nytmxkg" path="res://Themes/MainTheme.tres" id="4_gsidi"]

[sub_resource type="LabelSettings" id="LabelSettings_jye8g"]
font = ExtResource("3_6fqsf")
font_size = 128
font_color = Color(0.105882, 0.74902, 0, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource("1_4tj3h")
metadata/_edit_lock_ = true
metadata/_edit_horizontal_guides_ = []

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_axy0t")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 672.0
offset_top = 34.0
offset_right = 1248.0
offset_bottom = 198.0
size_flags_horizontal = 4
text = "Settings"
label_settings = SubResource("LabelSettings_jye8g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 40.0
offset_top = 235.0
offset_right = 1840.0
offset_bottom = 1015.0
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Display" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_gsidi")
text = "Display"
icon_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_gsidi")

[node name="Fullscreen" type="Control" parent="HBoxContainer/Panel"]
custom_minimum_size = Vector2(280, 65)
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 550.0
offset_bottom = 115.0

[node name="Label" type="Label" parent="HBoxContainer/Panel/Fullscreen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 222.0
offset_bottom = 32.5
grow_vertical = 2
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/Panel/Fullscreen"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(21, 13)

[node name="ScreenRes" type="Control" parent="HBoxContainer/Panel"]
custom_minimum_size = Vector2(280, 65)
anchors_preset = 0
offset_left = 52.0
offset_top = 128.0
offset_right = 552.0
offset_bottom = 193.0

[node name="Label" type="Label" parent="HBoxContainer/Panel/ScreenRes"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 222.0
offset_bottom = 32.5
grow_vertical = 2
text = "Screen resolution"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/Panel/ScreenRes"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -32.5
offset_right = 282.0
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(430, 0)
offset_left = 40.0
offset_top = 946.0
offset_right = 470.0
offset_bottom = 1017.0
size_flags_horizontal = 4
theme = ExtResource("4_gsidi")
text = "Back"
icon_alignment = 1

[connection signal="toggled" from="HBoxContainer/Panel/Fullscreen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="HBoxContainer/Panel/ScreenRes/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
